<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Copyright [2013] [Diego Ernesto Franco Chanona, Irving Lopez Perez, Miriam Alejandra Lugo Muciño, Raymundo Juarez Cortes]

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.  -->
    <string name="app_name">FoodBus</string>
    <string name="action_settings">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile">Profile</string>
    <string name="location">Localización</string>
    <string name="bus">Mi Bus</string>
    <string name="pedidos">Mis Pedidos</string>
    <string name="publicaciones">Mis Publicaciones</string>
    <string name="menu">Mi Menú</string>
    <string name="nocuenta">¿No tienes cuenta?</string>
    <string name="suscriptores">Suscriptores</string>
    <string name="personas">120 Personas</string>
    <string name="edit">Editar</string>
    <string name="nameBus">Ensaladas Truck</string>
    <string name="slogan">Slogan</string>
    <string name="textoSlogan">Verde sobre ruedas</string>
    <string name="presentacion">Presentación</string>
    <string name="textoPresentacion"> Somos una saludable opción cerca de ti</string>
    <string name="motivos">Motivos para presumir</string>
    <string name="textoMotivos">Contamos con 6 tipos de ensalda, bebidas naturales, y el mejor postre orgánico que podrás probar.</string>
    <string name="compartir">Compartir</string>
    <string name="promocion">Promoción</string>
	<string name="img"></string>
	
	<!-- PEDIDOS  -->
	
	<string name="nombrepedido">Juan Pérez</string>
	<string name="horapedido">13:45</string>
	<string name="pedido">Pedido</string>
	<string name="productopedido">Producto</string>
	<string name="cantidadpedido">Cantidad</string>
	<string name="preciopedido">Precio</string>
	<string name="subtotalpedido">Subtotal</string>
	<string name="totalpedido">Total</string>
	
	<string name="menu_uno">Menu 1</string>
	<string name="menu_cuatro">Menu 4</string>
	<string name="refresco">Refresco</string>
	
	<!--  PRODUCTOS -->
	
	<string name="productoMenu">Producto 1</string>
	<string name="precioproducto">$100.00</string>
	<string name="descripcionproducto">La mejor comida que podrás comer</string>
	
		<string name="plus_example_deep_link_id">/+/mobile/android/</string>
    <string name="plus_example_deep_link_url">
        https://developers.google.com/+/mobile/android/
    </string>
	
	
</resources>
