<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright [2013] [Diego Ernesto Franco Chanona, Irving Lopez Perez, Miriam Alejandra Lugo Muciño, Raymundo Juarez Cortes]

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_information"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical" >

            
            
            <LinearLayout 
                android:id="@+id/layout_infoBus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                
                <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    
                    <TextView 
                        android:id="@+id/txtNombreBus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"  
                        android:text="@string/nameBus"
                        android:textStyle="italic"
                        android:textColor="@color/gray_menu"/>
                    
                </LinearLayout>
                
                
                <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    
                     <TextView 
                        android:id="@+id/txtNombreBus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"  
                        android:text="@string/slogan"
                        android:textStyle="italic"
                        android:textColor="@color/gray_menu"/>
                    
                       <TextView 
                        android:id="@+id/txtNombreBus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"  
                        android:text="@string/textoSlogan"
                        android:textStyle="italic"
                        android:textColor="@color/gray_menu"/>
                     
                </LinearLayout>
                
                <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="vertical">
                       
                     <TextView 
                        android:id="@+id/txtNombreBus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"  
                        android:text="@string/presentacion"
                        android:textStyle="italic"
                        android:textColor="@color/gray_menu"/>
                    
                       <TextView 
                        android:id="@+id/txtNombreBus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"  
                        android:text="@string/textoPresentacion"
                        android:textStyle="italic"
                        android:textColor="@color/gray_menu"/>
                    
                </LinearLayout>
                
                <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    
                     <TextView 
                        android:id="@+id/txtNombreBus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"  
                        android:text="@string/motivos"
                        android:textStyle="italic"
                        android:textColor="@color/gray_menu"/>
                    
                       <TextView 
                        android:id="@+id/txtNombreBus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"  
                        android:text="@string/textoMotivos"
                        android:textStyle="italic"
                        android:textColor="@color/gray_menu"/>
                    
                </LinearLayout>
                
            </LinearLayout>
            
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>